Add competitive intelligence control panel section to frontend

--- a/public/index.html
+++ b/public/index.html
@@ -243,6 +243,22 @@
             </div>
           </div>
 
+          <div class="tile glass-card">
+            <h4>Competitive Intelligence Pack</h4>
+            <p class="section-sub">Differentiators: Meeting score, next agenda synthesis, MoM version compare, action reminders.</p>
+            <label>Reminder From Email</label>
+            <input class="field" id="reminderFromEmail" placeholder="you@company.com" />
+            <label>Reminder Delay (days)</label>
+            <input class="field" id="reminderDaysAhead" value="1" />
+            <div class="actions">
+              <button class="btn" type="button" id="intelligenceBtn" disabled>Get Meeting Intelligence</button>
+              <button class="btn" type="button" id="nextAgendaBtn" disabled>Generate Next Agenda</button>
+              <button class="btn" type="button" id="momVersionsBtn" disabled>MoM Versions</button>
+              <button class="btn" type="button" id="momCompareLatestBtn" disabled>Compare First vs Latest</button>
+              <button class="btn" type="button" id="scheduleRemindersBtn" disabled>Schedule Action Reminders</button>
+            </div>
+          </div>
+
           <div class="status-box" id="status">Login first.</div>
         </div>
       </section>
