Add risk radar and followup draft controls in UI

--- a/public/index.html
+++ b/public/index.html
@@ -252,7 +252,9 @@
             <input class="field" id="reminderDaysAhead" value="1" />
             <div class="actions">
               <button class="btn" type="button" id="intelligenceBtn" disabled>Get Meeting Intelligence</button>
+              <button class="btn" type="button" id="riskRadarBtn" disabled>Run Risk Radar</button>
               <button class="btn" type="button" id="nextAgendaBtn" disabled>Generate Next Agenda</button>
+              <button class="btn" type="button" id="followupDraftsBtn" disabled>Generate Follow-up Drafts</button>
               <button class="btn" type="button" id="momVersionsBtn" disabled>MoM Versions</button>
               <button class="btn" type="button" id="momCompareLatestBtn" disabled>Compare First vs Latest</button>
               <button class="btn" type="button" id="scheduleRemindersBtn" disabled>Schedule Action Reminders</button>
