Add AI conflict detector feature with API UI and docs

--- a/public/index.html
+++ b/public/index.html
@@ -253,6 +253,7 @@
             <div class="actions">
               <button class="btn" type="button" id="intelligenceBtn" disabled>Get Meeting Intelligence</button>
               <button class="btn" type="button" id="riskRadarBtn" disabled>Run Risk Radar</button>
+              <button class="btn" type="button" id="conflictMapBtn" disabled>Analyze Conflicts</button>
               <button class="btn" type="button" id="nextAgendaBtn" disabled>Generate Next Agenda</button>
               <button class="btn" type="button" id="followupDraftsBtn" disabled>Generate Follow-up Drafts</button>
               <button class="btn" type="button" id="momVersionsBtn" disabled>MoM Versions</button>
